objects/tffa__AccountPreference__c.object
<CustomObject>
    <description>List of account preferences/additional services applied along with the application. Example values are ATM_CARD, INTERNET_BANKING, CHECKBOOK</description>
    <fields>
        <fullName>SourceApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source Application ID</description>
        <label>SourceApplication</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>SourceApplication</relationshipLabel>
        <relationshipName>SourceApplication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__AccountName__c</fullName>
        <description>Name of the account linked in the account preference</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AccountNumber__c</fullName>
        <description>Account number. e.g. Account number captured for Balance Transfer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AccountType__c</fullName>
        <description>Type of account linked in the account preference</description>
        <label>AccountType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AddOnServiceType__c</fullName>
        <description>Captures the type of applied add-on service.</description>
        <label>Add-on service type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddOnServiceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Address associated with the preference. e.g Payment address captured for Balance Transfer.</description>
        <label>Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Account Preferences</relationshipLabel>
        <relationshipName>AccountPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Amount__c</fullName>
        <description>Amount. e.g. Transfer amount captured for Balance Transfer.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <description>Reference to parent application</description>
        <inlineHelpText>Master Detail Lookup</inlineHelpText>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Account Preferences</relationshipLabel>
        <relationshipName>AccountPreferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__CardBINCode__c</fullName>
        <description>Bank Identification Number (“BIN”) or Issuer identification number (“IIN”) is the first six digits of a bank card number or payment
        cards number and it is part of ISO/IEC 7812.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Bank Identification Number (“BIN”) or Issuer identification number (“IIN”) is beneficial to identify a card brand, issuing institution or bank, country of issuance, card type and category of cards.</inlineHelpText>
        <label>Card BIN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CardNumber__c</fullName>
        <description>Card number (of applied debit card)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Card number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>Unique identifier for the preference or service opted for.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Comments__c</fullName>
        <description>Additional notes captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summary of the preference or service offered.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__EmbossedName__c</fullName>
        <description>Name as it would appear on a card. e.g. Add-on Card.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Embossed name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores whether the preference or service was opted for.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialInstitution__c</fullName>
        <description>Name of the financial institution in which an account is held. e.g. Account details captured for Balance Transfer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to related party.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Account Preferences</relationshipLabel>
        <relationshipName>AccountPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__RoutingNumber__c</fullName>
        <description>Routing number of the account assoiciated with the account preference.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order w.r.t others in the list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <description>Current state (of processing) of the account preference.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Current status (of processing) of the account preference.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AccountPreferenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Nature of the preference.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AccountPreferenceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>Captures any additional detail related to the preference. If more details are required custom fields may be added.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Preference</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>